ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: ing
    namespace: 
  spec:
    rules:
      - host: localhost
        http:
          paths:
            - backend:
                serviceName: Service
                servicePort: 80
              path: /
    tls:
        - hosts:
            - localhost
          secretName: tls

---

  apiVersion: v1
  kind: Secret
  metadata:
    name: tls
    namespace: 
  data:
    tls.crt: <base64 encoded cert>
    tls.key: <base64 encoded key>
  type: kubernetes.io/tls
